peac_dev/force-app/main/default/objects/Approved_Offer__c/Approved_Offer__c.object-meta.xml
<CustomObject>
    <description>Approved Offer from Case Center Loan system.</description>
    <label>Approved Offer</label>
    <nameField>
        <displayFormat>Offer-{0}</displayFormat>
        <label>Approved Offer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>