peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Approved_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Approved_Frequency__c</fullName>
    <inlineHelpText>Value from Case Center. If set to daily, weekly payments do not calculate and user cannot select weekly as selected frequency. If set to Daily/Weekly, both daily and weekly calculate and selected frequency can be either.</inlineHelpText>
    <label>Approved Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Daily/Weekly</fullName>
                <default>true</default>
                <label>Daily/Weekly</label>
            </value>
            <value>
                <fullName>Daily/Weekly/Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>