peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Approved_Offer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Approved_Offer_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External ID from Case Center</inlineHelpText>
    <label>Approved Offer External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>