peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate__c</fullName>
    <label>Buy Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>