peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store financial record</description>
    <label>Financial</label>
    <referenceTo>Financial__c</referenceTo>
    <relationshipLabel>Approved Offers</relationshipLabel>
    <relationshipName>Financial_Approved_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>