peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Max_Fees__c.field-meta.xml
<CustomField>
    <fullName>Max_Fees__c</fullName>
    <label>Max Fees</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>