peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Max_Payback__c.field-meta.xml
<CustomField>
    <fullName>Max_Payback__c</fullName>
    <label>Max Payback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>