peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>