peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Monthly_Payment_as_of_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_as_of_Monthly_Revenue__c</fullName>
    <description>This field is added as part of SAL-5376 story</description>
    <formula>Daily_Payment__c  / ( Financial__r.Annual_Revenue__c  / (21*12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment as % of Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>