peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Number_of_Daily_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Daily_Payments__c</fullName>
    <formula>CEILING (Term__c * 21)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Daily Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>