peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Number_of_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Monthly_Payments__c</fullName>
    <formula>Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Monthly Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>