peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Number_of_Weekly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weekly_Payments__c</fullName>
    <formula>IF(TEXT(Approved_Frequency__c) = &quot;Daily/Weekly&quot; || TEXT(Approved_Frequency__c) = &quot;Daily/Weekly/Monthly&quot;, ROUND(Term__c * 4.33,0),
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Weekly Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>