peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Amount__c</fullName>
    <label>Offer (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>