peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Original_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Offer_Amount__c</fullName>
    <label>Original Offer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>