peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Select_for_approval__c.field-meta.xml
<CustomField>
    <fullName>Select_for_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for gds</description>
    <label>Select for approval</label>
    <type>Checkbox</type>
</CustomField>