peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Selected_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Selected_Frequency__c</fullName>
    <label>Selected Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approved_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>