peac_dev/force-app/main/default/objects/Approved_Offer__c/fields/Selected_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Selected_Offer_Amount__c</fullName>
    <inlineHelpText>Enter an amount less than or equal to the approved offer amount when selecting.</inlineHelpText>
    <label>Selected Offer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>