peac_dev/force-app/main/default/objects/Approved_Offer__c/validationRules/Cannot_exceed_max_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_exceed_max_approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Offer_Amount__c) &amp;&amp;
Offer_Amount__c &gt; Original_Offer_Amount__c &amp;&amp;
NOT($Profile.Name == &apos;GDS&apos; || CONTAINS($Profile.Name, &apos;Credit&apos;))</errorConditionFormula>
    <errorMessage>Offer amount cannot exceed Original Offer Amount.</errorMessage>
</ValidationRule>