peac_dev/force-app/main/default/objects/Approved_Offer__c/validationRules/Frequency_required_if_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Frequency_required_if_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Select__c,
   ISBLANK(TEXT(Selected_Frequency__c))
)</errorConditionFormula>
    <errorMessage>You must select a frequency to select an approved offer.</errorMessage>
</ValidationRule>