peac_dev/force-app/main/default/objects/Approved_Offer__c/validationRules/Max_Fees_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Fees_Validation</fullName>
    <active>true</active>
    <description>Credit user can not modify the Max fee</description>
    <errorConditionFormula>CONTAINS($Profile.Name, &apos;Credit&apos;) &amp;&amp; !ISNEW() &amp;&amp; ISCHANGED(Max_Fees__c  )</errorConditionFormula>
    <errorDisplayField>Max_Fees__c</errorDisplayField>
    <errorMessage>You do not have permission to update the Max Fees field on an existing offer.</errorMessage>
</ValidationRule>