peac_dev/force-app/main/default/objects/Approved_Offer__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
    $Setup.ORE__c.Bypass__c =False, 
   Opportunity__r.IsClosed
)</errorConditionFormula>
    <errorMessage>The related opportunity is closed. You cannot edit an approved offer related to a closed opportunity.</errorMessage>
</ValidationRule>