peac_dev/force-app/main/default/objects/Approved_Offer__c/validationRules/Selected_must_have_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Selected_must_have_info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  IsChanged(Select__c),
  Select__c,
  OR(
    ISBLANK(Number_of_Payments__c),
    Number_of_Payments__c &lt;= 0
  ),
  OR(
    ISBLANK(Offer_Amount__c),
    Offer_Amount__c &lt;= 0
  )
)</errorConditionFormula>
    <errorMessage>To select an approved offer, it must have an offer amount and number of payments.</errorMessage>
</ValidationRule>